- Created `msa/orchestration/synthesis.py` module with SynthesisEngine class - Implemented `__init__` method to initialize the synthesis engine - Implemented `synthesize_answer` method to generate answers from collected facts - Implemented `eliminate_redundancy` method to remove duplicate information - Implemented `construct_narrative` method to build coherent responses from facts - Implemented `generate_citations` method to create source attributions for claims - Added comprehensive logging throughout all operations following project conventions - Created unit tests in `tests/test_synthesis_engine.py` to verify synthesis functionality - Verified all methods work correctly with proper data handling
- Created `msa/orchestration/confidence.py` module with ConfidenceScorer class
- Implemented `__init__` method to initialize scorer with source weights and categories
- Implemented `calculate_source_credibility` method to rate source reliability
- Implemented `calculate_temporal_consistency` method to handle time-sensitive information
- Implemented `calculate_consistency_score` method to evaluate cross-source consistency
- Implemented `calculate_completeness_score` method to assess answer coverage
- Implemented `calculate_confidence_score` method for overall confidence calculation
- Implemented `generate_confidence_report` method to create detailed explanations
- Added comprehensive logging throughout all operations following project conventions
- Created unit tests in `tests/test_confidence_scorer.py` to verify scoring functionality
- Verified all methods work correctly with proper data handling

- Created `msa/orchestration/conflict.py` module with ConflictResolver class
- Implemented `detect_conflicts` method to identify contradictory claims in working memory
- Implemented `investigate_conflicts` method to gather additional context for conflicts
- Implemented `resolve_conflicts` method to weight and resolve contradictory information based on source reliability
- Implem

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "pytube>=15.0.0",
     "pyyaml>=6.0.2",
+    "sentence-transformers>=5.0.0",
     "transformers>=4.46.3",
     "wikipedia>=1.4.0",
     "youtube-transcript-api>=1.0.3",
