Completed major refactor of controller logic. Monolithic function was broken into smaller, more manageable pieces.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,4 +63,5 @@ ignore = ["ANN101", "D201", "D202",
 [tool.pytest.ini_options]
 pythonpath = [".", "./agents", "./tests"]
 addopts = "-rx"
+log_cli_level = "DEBUG"
 
